Update question in dialog rules

--- a/frame.html
+++ b/frame.html
@@ -261,11 +261,16 @@
 
             <div id="question-list" style="background-image: url(images/frame/bg-frame3-1.png); display: inherit">
               <div class="carousel">
-                <div class="block-image"><a class="isOpen" href="#"><img src="images/event/event1.png" alt="Image 1"/></a></div>
-                <div class="block-image"><a class="isLog" href="#"><img src="images/event/event2.png" alt="Image 2"/></a></div>
-                <div class="block-image"><a class="isLog" href="#"><img src="images/event/event3.png" alt="Image 3"/></a></div>
-                <div class="block-image"><a class="isLog" href="#"><img src="images/event/event4.png" alt="Image 4"/></a></div>
-                <div class="block-image"><a class="isOver" href="#"><img src="images/event/event5.png" alt="Image 5"/></a></div>
+                <div class="block-image"><a class="isOpen" href="#"><img src="images/event/event1.png"
+                                                                         alt="Image 1"/></a></div>
+                <div class="block-image"><a class="isLog" href="#"><img src="images/event/event2.png"
+                                                                        alt="Image 2"/></a></div>
+                <div class="block-image"><a class="isLog" href="#"><img src="images/event/event3.png"
+                                                                        alt="Image 3"/></a></div>
+                <div class="block-image"><a class="isLog" href="#"><img src="images/event/event4.png"
+                                                                        alt="Image 4"/></a></div>
+                <div class="block-image"><a class="isOver" href="#"><img src="images/event/event5.png"
+                                                                         alt="Image 5"/></a></div>
               </div>
 
               <div class="promotion-block">
@@ -435,9 +440,9 @@
               trung tâm thương maik Saigon Center vào ngày 14/8/2016 cùng với 1 người bạn của mình. Nhiều thử thách bất
               ngờ cùng các phần quà hấp dẫn chờ đón các bạn!</p>
 
-            <a class="btn-frame4 show-the-rule" href="#">Sưu tập mảnh ghép</a>
+            <a class="btn-frame4 seq-prev " href="#">Sưu tập mảnh ghép</a>
 
-            <a class="btn-frame4 seq-prev" href="#">Nội dung chương trình</a>
+            <a class="btn-frame4 show-the-rule" href="#">Nội dung chương trình</a>
           </div>
         </div>
       </li>
@@ -514,33 +519,69 @@
   </div>
 </div>
 
-<div id="rules" class="dialog">
+<div id="dialogRules" class="dialog">
   <div class="dialog-overlay"></div>
   <div class="dialog-content">
     <div class="dialog-header">
-      <i class="icon-lock"></i>
+      <h2 class="title-rules">Thể lệ chương trình</h2>
 
-      <h2 class="title-login">Mời bạn đăng nhập facebook <br/> trước khi trả lời câu hỏi</h2>
-      <i class="icon-facebook-dialog"></i>
-      <a href="#" class="btn-login-with-facebook"><span>Đăng nhập facebook</span></a>
+      <h2 class="sub-title-rules">'The Crazy Race'</h2>
+
+      <div class="row">
+        <div class="col-md-6">
+          <p class="content-rules">
+            But I must explain to you how all this mistaken idea of denouncing of a pleasure and praising pain was born
+            and I will give you a complete account of the system, and expound the actual teachings of the great explorer
+            of the truth, the master-builder of human happiness.
+            <br/>
+            <br/>
+            On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and
+            demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain
+            and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through
+            weakness of will, which is the same as saying through shrinking from toil and pain. These cases are
+            perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammeled and when
+            nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain
+            avoided.
+          </p>
+        </div>
+        <div class="col-md-6">
+          <p class="content-rules">
+            Nor again is there anyone who loves or pursues or desires to obtain
+            pain of itself, because it is pain, but occasionally circumstances occur in which toil and pain can procure
+            him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise,
+            except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy
+            a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?
+            <br/>
+            <br/>
+            On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and
+            demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain
+            and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through
+            weakness of will, which is the same as saying through shrinking from toil and pain. These cases are
+            perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammeled and when
+            nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain
+            avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will
+            frequently occur that pleasures have to be repudiated and annoyances accepted.
+          </p>
+        </div>
+      </div>
     </div>
     <div class="dialog-footer">
-      <a href="#" class="close-dialog-login btn-close-login">Đóng</a>
+      <a href="#" class="close-dialog-rules btn-close-rules">Đóng</a>
     </div>
   </div>
 </div>
 
-  <script type="text/javascript" src="js/lib/jquery-2.2.3.min.js"></script>
-  <script type="text/javascript" src="js/lib/jquery.easing.min.js"></script>
-  <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
-  <script type="text/javascript" src="js/lib/wow.min.js"></script>
-  <script type="text/javascript" src="js/lib/jquery.slimscroll.min.js"></script>
-  <script src="js/lib/imagesloaded.pkgd.min.js"></script>
-  <script src="js/lib/hammer.min.js"></script>
-  <script src="js/lib/sequence.min.js"></script>
-  <script src="js/lib/sequence-theme.two-up.min.js"></script>
-  <script src="js/countdown.js"></script>
-  <script src="js/carousel.js"></script>
-  <script type="text/javascript" src="js/script.js"></script>
+<script type="text/javascript" src="js/lib/jquery-2.2.3.min.js"></script>
+<script type="text/javascript" src="js/lib/jquery.easing.min.js"></script>
+<script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/lib/wow.min.js"></script>
+<script type="text/javascript" src="js/lib/jquery.slimscroll.min.js"></script>
+<script type="text/javascript" src="js/lib/imagesloaded.pkgd.min.js"></script>
+<script type="text/javascript" src="js/lib/hammer.min.js"></script>
+<script type="text/javascript" src="js/lib/sequence.min.js"></script>
+<script type="text/javascript" src="js/lib/sequence-theme.two-up.min.js"></script>
+<script type="text/javascript" src="js/countdown.js"></script>
+<script type="text/javascript" src="js/carousel.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
