--- a/frame.html
+++ b/frame.html
@@ -30,7 +30,7 @@
 <section id="sequence" class="seq">
   <!-- Logo -->
   <div class="logo">
-    <a href="#"><img src="images/logo.png" alt=""/></a>
+    <a href="#" style="background-image: url(images/logo.png)"></a>
   </div>
 
   <div class="login-face">
@@ -422,7 +422,6 @@
             </div>
           </div>
         </div>
-
       </li>
       <li id="step4" class="step4">
         <div data-seq class="seq-feature seq-full ">
@@ -447,6 +446,211 @@
         </div>
       </li>
     </ul>
+  </div>
+
+  <div class="mobile-block">
+    <div class="block-1">
+      <div class="block-content">
+        <h2 class="title-frame1">Khám phá</h2>
+
+        <h2 class="sub-title-frame1">Saigon center</h2>
+
+        <h3 class="description-frame1">Qua từng mảnh ghép <br/> trong 28 ngày bất ngờ</h3>
+
+        <a class="view-gallery-btn seq-next" href="#">Sưu tập mảnh ghép</a>
+      </div>
+      <a href="#" class="btn-mobile-next">
+        <div class="mouse_scroll">
+          <div class="mouse">
+            <div class="wheel"></div>
+          </div>
+          <div style="">
+            <span class="m_scroll_arrows unu"></span>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="block-2">
+      <div class="block-content">
+        <h2 class="title-frame2">Sưu tập mảnh ghép</h2>
+
+        <div class="frame2-content">Từ ngày 11/07 tới ngày 07/08, mỗi ngày Saigon Center mang tới một câu hỏi thú vị
+          với những món quà sẽ khiến bạn bất ngờ. Tham gia thử thách mỗi ngày để nhận được những chiếc huy hiệu quý
+          giá cho cuộc thi Offline 'The Crazy Race' sẽ được tổ chức vào ngày 14/08.
+        </div>
+
+        <ul class="frame2-group">
+          <li><a class="btn-frame2 text-left" href="#">28 ngày bất ngờ</a></li>
+          <li><a class="btn-frame2 text-right" href="#">The crazy race</a></li>
+        </ul>
+
+        <div class="panel-group" role="tablist" aria-multiselectable="true" id="group-description-mobile">
+          <div class="panel gs-panel">
+            <div class="panel-heading" role="tab" id="headingGroup1-mobile">
+              <h4 class="panel-title">
+                <a role="button" data-toggle="collapse" data-parent="#group-description-mobile" href="#group1-mobile"
+                   aria-expanded="true" aria-controls="group1">
+                  <i class="panel-arrow"></i> <span>Ba bước tham gia đơn giản</span>
+                </a>
+              </h4>
+            </div>
+            <div id="group1-mobile" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingGroup1">
+              <div class="panel-body">
+                <div class="row">
+                  <div class="col-xs-4">
+                    <div class="content-group1">
+                      <a href="#"><i class="icon-home"></i></a>
+
+                      <p class="content-group">
+                        Truy cập website <a class="link-group"
+                                            href="http://saigoncentre.com.vn">saigoncentre.com.vn</a> và vào trang
+                        ‘28 Days of Surprise'.
+                      </p>
+                    </div>
+                  </div>
+                  <div class="col-xs-4">
+                    <div class="content-group1">
+                      <a href="#"><i class="icon-facebook"></i></a>
+
+                      <p class="content-group">
+                        Đăng nhập bằng tài khoản Facebook để tham gia giải câu hỏi
+                      </p>
+                    </div>
+                  </div>
+                  <div class="col-xs-4">
+                    <div class="content-group1">
+                      <a href="#"><i class="icon-question"></i></a>
+
+                      <p class="content-group">
+                        Trả lời mảnh ghép tương ứng với mỗi câu hỏi để nhận phần quà bất ngờ
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="panel gs-panel">
+            <div class="panel-heading" role="tab" id="headingGroup2-mobile">
+              <h4 class="panel-title">
+                <a class="collapsed" role="button" data-toggle="collapse"
+                   data-parent="#group-description-mobile"
+                   href="#group2-mobile" aria-expanded="false"
+                   aria-controls="group2">
+                  <i class="panel-arrow"></i> <span>Những điều cần biết</span>
+                </a>
+              </h4>
+            </div>
+            <div id="group2-mobile" class="panel-collapse collapse"
+                 role="tabpanel"
+                 aria-labelledby="headingGroup2">
+              <div class="panel-body">
+                <div class="row">
+                  <div class="col-md-12">
+                    <div class="content-group2">
+                      <p class="content-group">
+                        1. Mảnh ghép ẩn chứa câu hỏi sẽ được mở ra trên website vào lúc 10h sáng mỗi ngày từ ngày
+                        11/07/2016 đến 07/08/2016.
+                      </p>
+
+                      <p class="content-group">
+                        2. Bạn chỉ có duy nhất 1 cơ hội trả lời câu hỏi, vì thế hãy kiểm tra thật kỹ và chắc chắn
+                        rằng
+                        đó là đáp án cuối cùng của bạn.
+                      </p>
+
+                      <p class="content-group">
+                        3. Khi trả lời xong câu hỏi, nếu đúng bạn sẽ được nhận 1 huy hiệu bỏ vào Giỏ sưu tập của
+                        bạn. Bạn phải sưu tầm ít nhất 14 huy hiệu mới đủ điều kiện vào vòng trong 'The Crazy Race'.
+                      </p>
+
+                      <p class="content-group">
+                        4. Mỗi ngày nếu bạn trả lời đúng câu hỏi, bạn sẽ có cơ hội được nhận phần quà bất ngờ tương
+                        ứng với ngày đó.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="panel gs-panel">
+            <div class="panel-heading" role="tab" id="headingGroup3-mobile">
+              <h4 class="panel-title">
+                <a class="collapsed" role="button" data-toggle="collapse"
+                   data-parent="#group-description-mobile"
+                   href="#group3-mobile" aria-expanded="false"
+                   aria-controls="group3">
+                  <i class="panel-arrow"></i> <span>Những câu hỏi thường gặp</span>
+                </a>
+              </h4>
+            </div>
+            <div id="group3-mobile" class="panel-collapse collapse"
+                 role="tabpanel"
+                 aria-labelledby="headingGroup3">
+              <div class="panel-body">
+                <div class="row">
+                  <div class="col-md-12">
+                    <div class="content-group3-mobile">
+                      <p class="content-group">
+                        <span class="question">1. Các câu hỏi dưới dạng gì? Có khó không?</span>
+                        Câu hỏi dưới hình thức trắc nghiệm để bạn lựa chọn 1 trong 4 phương án trả lời. Bạn sẽ được
+                        cung cấp những manh mối liên quan tới những nhãn hàng đã và sắp có mặt tại Saigon Center.
+                      </p>
+
+                      <p class="content-group">
+                        <span class="question">2. Tôi có thể sửa đáp án được không?</span>
+                        Bạn chỉ được trả lời câu hỏi của ngày 1 lần duy nhất. Vì thế, bạn hãy chắc chắn với phương
+                        án cuối cùng của mình. </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="block-3">
+      <div class="block-content">
+        <div style="display: none" class="step-mobile-1">
+          <div class="event-mobile">
+            <div><a class="event-block" href="#1"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
+            <div><a class="event-block" href="#2"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
+            <div><a class="event-block" href="#3"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
+            <div><a class="event-block" href="#4"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
+            <div><a class="event-block" href="#5"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
+            <div><a class="event-block" href="#6"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
+          </div>
+          <div class="promotion-block">
+            <i class="icon-device"></i>
+
+            <h2 class="title-frame3">Khám phá mảnh ghép hôm nay</h2>
+
+            <h3 class="description-frame3">
+              Cơ hội để nhận voucher 1.000.000 VND!
+            </h3>
+          </div>
+        </div>
+        <div class="step-mobile-2">
+          
+        </div>
+      </div>
+    </div>
+    <div class="block-4">
+      <div class="block-content">
+        <h2 class="title-frame4">The Crazy Race</h2>
+
+        <p class="frame4-content">50 bạn sưu tập trên 14 mảnh ghép bất ngờ có cơ hội được lựa chọn để tham gia cuộc
+          thi The Crazy Race tại
+          trung tâm thương maik Saigon Center vào ngày 14/8/2016 cùng với 1 người bạn của mình. Nhiều thử thách bất
+          ngờ cùng các phần quà hấp dẫn chờ đón các bạn!</p>
+
+        <a class="btn-frame4 seq-prev " href="#">Sưu tập mảnh ghép</a>
+
+        <a class="btn-frame4 show-the-rule" href="#">Nội dung chương trình</a>
+      </div>
+    </div>
   </div>
 
   <div class="countdown">
@@ -574,6 +778,8 @@
 <script type="text/javascript" src="js/lib/jquery-2.2.3.min.js"></script>
 <script type="text/javascript" src="js/lib/jquery.easing.min.js"></script>
 <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/lib/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="js/lib/slick.min.js"></script>
 <script type="text/javascript" src="js/lib/wow.min.js"></script>
 <script type="text/javascript" src="js/lib/jquery.slimscroll.min.js"></script>
 <script type="text/javascript" src="js/lib/imagesloaded.pkgd.min.js"></script>
