--- a/frame.html
+++ b/frame.html
@@ -615,12 +615,12 @@
       <div class="block-content">
         <div style="display: none" class="step-mobile-1">
           <div class="event-mobile">
-            <div><a class="event-block" href="#1"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
-            <div><a class="event-block" href="#2"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
-            <div><a class="event-block" href="#3"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
-            <div><a class="event-block" href="#4"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
-            <div><a class="event-block" href="#5"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
-            <div><a class="event-block" href="#6"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
+            <div><a class="event-block" href="#"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
+            <div><a class="event-block" href="#"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
+            <div><a class="event-block" href="#"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
+            <div><a class="event-block" href="#"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
+            <div><a class="event-block" href="#"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
+            <div><a class="event-block" href="#"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
           </div>
           <div class="promotion-block">
             <i class="icon-device"></i>
@@ -632,8 +632,137 @@
             </h3>
           </div>
         </div>
-        <div class="step-mobile-2">
-          
+        <div style="display: none" class="step-mobile-2">
+          <div class="question-block">
+            <h2 class="question-title">Bạn có thể đoán ra được bất ngờ nào sẽ xuất hiện tại Saigon Center
+              tuần tới?</h2>
+
+            <p class="question-description">
+              Đây là tuần lễ khai trương của một thương hiệu lần đầu tiên có mặt tại Việt Nam. <br/>
+              Đây cũng là một thương hiệu nổi tiếng của Nhật theo mô hình Department Store.
+            </p>
+            <div class="wrapper-block">
+              <div class="row">
+                <div class="col-xs-6" style="padding-right: 0">
+                  <div class="image-block">
+                    <img src="images/mobile/event-mobile1.png" alt="Image 1"/>
+                    <a href="#" class="btn-back"><i class="icon-back"></i> <span>Trở lại</span></a>
+                  </div>
+                </div>
+                <div class="col-xs-6" style="padding-left: 0">
+                  <form id="question-data-mobile">
+                    <div class="radio">
+                      <input type="radio" name="optionsRadios-mobile" id="value1-mobile" value="A">
+                      <label for="value1-mobile">
+                        <span><i>A</i></span>Takashimaya
+                      </label>
+                    </div>
+                    <div class="radio">
+                      <input type="radio" name="optionsRadios-mobile" id="value2-mobile" value="B">
+                      <label for="value2-mobile">
+                        <span><i>B</i></span>Superdry
+                      </label>
+                    </div>
+                    <div class="radio">
+                      <input type="radio" name="optionsRadios-mobile" id="value3-mobile" value="C">
+                      <label for="value3-mobile">
+                        <span><i>C</i></span>Marakume
+                      </label>
+                    </div>
+                    <div class="radio">
+                      <input type="radio" name="optionsRadios-mobile" id="value4-mobile" value="D">
+                      <label for="value4-mobile">
+                        <span><i>D</i></span>Momo Paradise
+                      </label>
+                    </div>
+                    <div class="form-group">
+                      <div class="col-md-12">
+                        <button type="submit" class="btn-submit">Xác nhận</button>
+                        <span class="note-form">(*) Bạn chỉ có thể trả lời một lần</span>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div style="display: none" class="step-mobile-success">
+          <div class="success-block">
+            <div class="row">
+              <div class="col-xs-12">
+                <div class="content-block">
+                  <div class="wrapper-block">
+                    <div class="image-block">
+                      <img src="images/mobile/event-mobile-result.png" alt="Image 1"/>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-xs-12">
+                <div class="content-block">
+                  <div class="wrapper-block">
+                    <div class="reward-block">
+                      <h2 class="reward-title">Chúc mừng bạn đã trả lời chính xác!</h2>
+
+                      <p class="reward-description">
+                        Bạn nhận được một huy hiệu để bỏ vào bộ sưu tập.<br/>
+                        Đừng quên quay vào ngày mai để giải mã câu hỏi tiếp theo và xem kết quả nhận quà bất ngờ của
+                        ngày hôm nay không nhé? <br/>
+                        <i>Thu thập thêm 10 mảnh để có cơ hội tham gia <a href="#">'THE CRAZY RACE'</a></i>
+                      </p>
+
+                      <div class="reward-action">
+                        <a href="#" class="view-gallery btn-reward">Xem bộ sưu tập</a>
+                        <a href="#" class="share-facebook btn-reward">Chia sẻ facebook</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div style="display: block" class="step-mobile-lost">
+          <div class="lost-main-block">
+            <div class="row">
+              <div class="col-xs-12">
+                <div class="content-block">
+                  <div class="wrapper-block">
+                    <div class="image-block">
+                      <img src="images/mobile/event-mobile-result-lost.png" alt="Image 1"/>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-xs-12">
+                <div class="content-block">
+                  <div class="wrapper-block">
+                    <div class="lost-block">
+                      <h2 class="lost-title">Rất tiếc bạn đã chọn câu trả lời sai!</h2>
+
+                      <h3 class="result-lost">
+                        Câu trả lời đúng là B
+                      </h3>
+
+                      <p class="lost-description">
+
+                        <i>Đừng quên quay vào ngày mai để giải mã câu hỏi tiếp theo và xem kết quả nhận quà bất ngờ
+                          của
+                          ngày hôm nay không nhé? <br/>
+                          Thu thập thêm 10 mảnh để có cơ hội tham gia <a href="#">'THE CRAZY RACE'</a></i>
+                      </p>
+
+                      <div class="lost-action">
+                        <a href="#" class="view-gallery btn-lost">Xem bộ sưu tập</a>
+                        <a href="#" class="share-facebook btn-lost">Chia sẻ facebook</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
