--- a/frame.html
+++ b/frame.html
@@ -616,12 +616,12 @@
       <div class="block-content">
         <div style="display: block" class="step-mobile-1">
           <div class="event-mobile">
-            <div><a class="event-block" href="#"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
-            <div><a class="event-block" href="#"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
-            <div><a class="event-block" href="#"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
-            <div><a class="event-block" href="#"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
-            <div><a class="event-block" href="#"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
-            <div><a class="event-block" href="#"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
+            <div class="event-block"><a class="isOpenMobile" href="#1"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
+            <div class="event-block"><a class="isCloseMobile" href="#2"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
+            <div class="event-block"><a class="isCloseMobile" href="#3"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
+            <div class="event-block"><a class="isCloseMobile" href="#4"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
+            <div class="event-block"><a class="isCloseMobile" href="#5"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
+            <div class="event-block"><a class="isFutureMobile" href="#6"><img src="images/mobile/event-mobile1.png" alt=""/></a></div>
           </div>
           <div class="promotion-block">
             <i class="icon-device"></i>
@@ -648,7 +648,7 @@
                 <div class="col-xs-6" style="padding-right: 0">
                   <div class="image-block">
                     <img src="images/mobile/event-mobile1.png" alt="Image 1"/>
-                    <a href="#" class="btn-back"><i class="icon-back"></i> <span>Trở lại</span></a>
+                    <a href="#" class="btn-back-mobile"><i class="icon-back"></i> <span>Trở lại</span></a>
                   </div>
                 </div>
                 <div class="col-xs-6" style="padding-left: 0">
@@ -715,7 +715,7 @@
                       </p>
 
                       <div class="reward-action">
-                        <a href="#" class="view-gallery btn-reward">Xem bộ sưu tập</a>
+                        <a href="#" class="view-gallery-mobile btn-reward">Xem bộ sưu tập</a>
                         <a href="#" class="share-facebook btn-reward">Chia sẻ facebook</a>
                       </div>
                     </div>
@@ -752,7 +752,7 @@
                   </p>
 
                   <div class="lost-action">
-                    <a href="#" class="view-gallery btn-lost">Xem bộ sưu tập</a>
+                    <a href="#" class="view-gallery-mobile btn-lost">Xem bộ sưu tập</a>
                     <a href="#" class="share-facebook btn-lost">Chia sẻ facebook</a>
                   </div>
                 </div>
@@ -840,6 +840,37 @@
 
               <a href="#" class="btn-gallery" style="">Chia sẻ</a>
               <a href="#" class="btn-gallery close-dialog-gallery" style="">Đóng</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div id="dialogGalleryMobile" class="dialog">
+  <div class="dialog-overlay"></div>
+  <div class="dialog-content">
+    <div class="gallery-background" style="background-image: url(images/mobile/bg-collection.png);">
+      <div class="row">
+        <div class="col-md-6 col-md-offset-6">
+          <div class="gallery-content">
+            <div class="group-gallery">
+              <i class="icon-gallery"></i>
+
+              <h2 class="title-gallery" style="">Bộ sưu tập</h2>
+
+              <div class="total-gallery">
+                <h3 class="title-total-gallery">Bạn đã thu thập được</h3>
+
+                <div class="result">
+                  <span>14/28</span>
+                  mảnh ghép
+                </div>
+              </div>
+
+              <a href="#" class="btn-gallery" style="">Chia sẻ</a>
+              <a href="#" class="btn-gallery close-dialog-gallery-mobile" style="">Đóng</a>
             </div>
           </div>
         </div>
