--- a/frame.html
+++ b/frame.html
@@ -450,6 +450,7 @@
 
   <div class="mobile-block">
     <div class="block-1" id="block-1-mobile">
+      <img class="wow fadeInRight" src="images/mobile/state1-bg-item.png" alt=""/>
       <div class="block-content">
         <h2 class="title-frame1">Khám phá</h2>
 
@@ -737,7 +738,7 @@
             <div class="content-block">
               <div class="wrapper-block">
                 <div class="lost-block">
-                  <h2 class="lost-title">Rất tiếc bạn đã chọn câu trả lời sai!</h2>
+                  <h2 class="lost-title">Rất tiếc <br/> bạn đã chọn câu trả lời sai!</h2>
 
                   <h3 class="result-lost">
                     Câu trả lời đúng là B
@@ -985,8 +986,8 @@
   </div>
 </div>
 
-<script type="text/javascript" src="js/lib/jquery-2.2.3.min.js"></script>
-<script type="text/javascript" src="js/lib/smooth-scroll.min.js"></script>
+<script type="text/javascript" src="js/lib/jquery-1.12.1.min.js"></script>
+<!--<script type="text/javascript" src="js/lib/jquery-2.2.3.min.js"></script>-->
 <script type="text/javascript" src="js/lib/jquery.easing.min.js"></script>
 <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/lib/jquery-migrate-1.2.1.min.js"></script>
@@ -997,10 +998,15 @@
 <script type="text/javascript" src="js/lib/hammer.min.js"></script>
 <script type="text/javascript" src="js/lib/sequence.min.js"></script>
 <script type="text/javascript" src="js/lib/sequence-theme.two-up.min.js"></script>
+<script type="text/javascript" src="js/lib/smooth-scroll.js"></script>
 
 <script type="text/javascript" src="js/countdown.js"></script>
 <script type="text/javascript" src="js/carousel.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
+
+<script>
+  smoothScroll.init();
+</script>
 
 </body>
 </html>
